# safework-rileva-pdl-refactored

./: CLAUDE.md  GEMINI.md  README.md  pyproject.toml
src/safework_pdl_manager/: main.py
src/safework_pdl_manager/automation/: driver.py  locators.py
src/safework_pdl_manager/automation/pages/: export_page.py  login_page.py
src/safework_pdl_manager/core/: config.py
src/safework_pdl_manager/excel/: sync.py
src/safework_pdl_manager/models/: pdl.py
