[tool.poetry]
name = "safework-pdl-manager-refactored"
version = "0.2.0"
description = "Versione Enterprise del rilevamento PdL e Audit Programmazione Safework"
authors = ["Giancarlo Allegretti"]
packages = [
    { include = "safework_pdl_manager", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
selenium = "4.18.1"
webdriver-manager = "4.0.1"
openpyxl = ">=3.1.5"
pywin32 = { version = "*", platform = "win32" }
loguru = "*"
rich = "*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "*"
pytest = "^8.0.0"
xenon = "^0.9.3"
radon = "*"
interrogate = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Configurazione Qualità
[tool.ruff]
target-version = "py312"
line-length = 110
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "UP", "C4", "PERF", "FURB", "RUF", "ANN", "S", "N", "TRY", "PL"]
ignore = ["E501", "RET504", "DTZ005", "T201", "ANN401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["selenium.*", "win32com.*", "loguru.*", "rich.*", "openpyxl.*"]
ignore_missing_imports = true

[tool.interrogate]
fail-under = 90
exclude = ["tests", "docs", "build", "dist"]
verbose = 1
